tests/cases/compiler-development/artifact/errors/diagnostic_cycle_b.ari
mod diagnostic_cycle_a;

pub fn value() -> i64 {
  return 2;
}
